src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Vertex___bindgen_ty_2"][::std::mem::size_of::<Vertex___bindgen_ty_2>() - 16usize];
    ["Alignment of Vertex___bindgen_ty_2"]
        [::std::mem::align_of::<Vertex___bindgen_ty_2>() - 8usize];
    ["Offset of field: Vertex___bindgen_ty_2::vName_"]
        [::std::mem::offset_of!(Vertex___bindgen_ty_2, vName_) - 0usize];
};
impl Default for Vertex___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Vertex_"][::std::mem::size_of::<Vertex_>() - 24usize];
    ["Alignment of Vertex_"][::std::mem::align_of::<Vertex_>() - 8usize];
    ["Offset of field: Vertex_::kind"][::std::mem::offset_of!(Vertex_, kind) - 0usize];
    ["Offset of field: Vertex_::u"][::std::mem::offset_of!(Vertex_, u) - 8usize];
};
impl Default for Vertex_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_VName(p0: Name, p1: ListAttr) -> Vertex;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Name_ {
    pub kind: Name___bindgen_ty_1,
    pub u: Name___bindgen_ty_2,
}
pub const Name__is_NameWildcard: Name___bindgen_ty_1 = 0;
pub const Name__is_NameVVar: Name___bindgen_ty_1 = 1;
pub const Name__is_NameGVar: Name___bindgen_ty_1 = 2;
pub const Name__is_NameQuoteGraph: Name___bindgen_ty_1 = 3;
pub const Name__is_NameQuoteVertex: Name___bindgen_ty_1 = 4;
pub type Name___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union Name___bindgen_ty_2 {
    pub nameVVar_: Name___bindgen_ty_2__bindgen_ty_1,
    pub nameGVar_: Name___bindgen_ty_2__bindgen_ty_2,
    pub nameQuoteGraph_: Name___bindgen_ty_2__bindgen_ty_3,
    pub nameQuoteVertex_: Name___bindgen_ty_2__bindgen_ty_4,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Name___bindgen_ty_2__bindgen_ty_1 {
    pub lvar_: LVar,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<Name___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Alignment of Name___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<Name___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: Name___bindgen_ty_2__bindgen_ty_1::lvar_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2__bindgen_ty_1, lvar_) - 0usize];
};
impl Default for Name___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Name___bindgen_ty_2__bindgen_ty_2 {
    pub uvar_: UVar,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name___bindgen_ty_2__bindgen_ty_2"]
        [::std::mem::size_of::<Name___bindgen_ty_2__bindgen_ty_2>() - 8usize];
    ["Alignment of Name___bindgen_ty_2__bindgen_ty_2"]
        [::std::mem::align_of::<Name___bindgen_ty_2__bindgen_ty_2>() - 8usize];
    ["Offset of field: Name___bindgen_ty_2__bindgen_ty_2::uvar_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2__bindgen_ty_2, uvar_) - 0usize];
};
impl Default for Name___bindgen_ty_2__bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Name___bindgen_ty_2__bindgen_ty_3 {
    pub graph_: Graph,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name___bindgen_ty_2__bindgen_ty_3"]
        [::std::mem::size_of::<Name___bindgen_ty_2__bindgen_ty_3>() - 8usize];
    ["Alignment of Name___bindgen_ty_2__bindgen_ty_3"]
        [::std::mem::align_of::<Name___bindgen_ty_2__bindgen_ty_3>() - 8usize];
    ["Offset of field: Name___bindgen_ty_2__bindgen_ty_3::graph_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2__bindgen_ty_3, graph_) - 0usize];
};
impl Default for Name___bindgen_ty_2__bindgen_ty_3 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Name___bindgen_ty_2__bindgen_ty_4 {
    pub vertex_: Vertex,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name___bindgen_ty_2__bindgen_ty_4"]
        [::std::mem::size_of::<Name___bindgen_ty_2__bindgen_ty_4>() - 8usize];
    ["Alignment of Name___bindgen_ty_2__bindgen_ty_4"]
        [::std::mem::align_of::<Name___bindgen_ty_2__bindgen_ty_4>() - 8usize];
    ["Offset of field: Name___bindgen_ty_2__bindgen_ty_4::vertex_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2__bindgen_ty_4, vertex_) - 0usize];
};
impl Default for Name___bindgen_ty_2__bindgen_ty_4 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name___bindgen_ty_2"][::std::mem::size_of::<Name___bindgen_ty_2>() - 8usize];
    ["Alignment of Name___bindgen_ty_2"][::std::mem::align_of::<Name___bindgen_ty_2>() - 8usize];
    ["Offset of field: Name___bindgen_ty_2::nameVVar_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2, nameVVar_) - 0usize];
    ["Offset of field: Name___bindgen_ty_2::nameGVar_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2, nameGVar_) - 0usize];
    ["Offset of field: Name___bindgen_ty_2::nameQuoteGraph_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2, nameQuoteGraph_) - 0usize];
    ["Offset of field: Name___bindgen_ty_2::nameQuoteVertex_"]
        [::std::mem::offset_of!(Name___bindgen_ty_2, nameQuoteVertex_) - 0usize];
};
impl Default for Name___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Name_"][::std::mem::size_of::<Name_>() - 16usize];
    ["Alignment of Name_"][::std::mem::align_of::<Name_>() - 8usize];
    ["Offset of field: Name_::kind"][::std::mem::offset_of!(Name_, kind) - 0usize];
    ["Offset of field: Name_::u"][::std::mem::offset_of!(Name_, u) - 8usize];
};
impl Default for Name_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_NameWildcard() -> Name;
}
unsafe extern "C" {
    pub fn make_NameVVar(p0: LVar) -> Name;
}
unsafe extern "C" {
    pub fn make_NameGVar(p0: UVar) -> Name;
}
unsafe extern "C" {
    pub fn make_NameQuoteGraph(p0: Graph) -> Name;
}
unsafe extern "C" {
    pub fn make_NameQuoteVertex(p0: Vertex) -> Name;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ListName_ {
    pub name_: Name,
    pub listname_: ListName,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ListName_"][::std::mem::size_of::<ListName_>() - 16usize];
    ["Alignment of ListName_"][::std::mem::align_of::<ListName_>() - 8usize];
    ["Offset of field: ListName_::name_"][::std::mem::offset_of!(ListName_, name_) - 0usize];
    ["Offset of field: ListName_::listname_"]
        [::std::mem::offset_of!(ListName_, listname_) - 8usize];
};
impl Default for ListName_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_ListName(p1: Name, p2: ListName) -> ListName;
}
unsafe extern "C" {
    #[doc = "   Cloning"]
    pub fn clone_Graph(p: Graph) -> Graph;
}
unsafe extern "C" {
    pub fn clone_Binding(p: Binding) -> Binding;
}
unsafe extern "C" {
    pub fn clone_GraphBinding(p: GraphBinding) -> GraphBinding;
}
unsafe extern "C" {
    pub fn clone_AttrVal(p: AttrVal) -> AttrVal;
}
unsafe extern "C" {
    pub fn clone_AttrName(p: AttrName) -> AttrName;
}
unsafe extern "C" {
    pub fn clone_Attr(p: Attr) -> Attr;
}
unsafe extern "C" {
    pub fn clone_ListAttr(p: ListAttr) -> ListAttr;
}
unsafe extern "C" {
    pub fn clone_Vertex(p: Vertex) -> Vertex;
}
unsafe extern "C" {
    pub fn clone_Name(p: Name) -> Name;
}
unsafe extern "C" {
    pub fn clone_ListName(p: ListName) -> ListName;
}
unsafe extern "C" {
    #[doc = "   Recursive Destructors"]
    pub fn free_Graph(p: Graph);
}
unsafe extern "C" {
    pub fn free_Binding(p: Binding);
}
unsafe extern "C" {
    pub fn free_GraphBinding(p: GraphBinding);
}
unsafe extern "C" {
    pub fn free_AttrVal(p: AttrVal);
}
unsafe extern "C" {
    pub fn free_AttrName(p: AttrName);
}
unsafe extern "C" {
    pub fn free_Attr(p: Attr);
}
unsafe extern "C" {
    pub fn free_ListAttr(p: ListAttr);
}
unsafe extern "C" {
    pub fn free_Vertex(p: Vertex);
}
unsafe extern "C" {
    pub fn free_Name(p: Name);
}
unsafe extern "C" {
    pub fn free_ListName(p: ListName);
}
